--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ DESKTOP SIZE
   }
   .main-nav a:hover,
   .main-nav .current {
-    border-bottom: 2px solid #2d3374;
+    border-bottom: 2px solid #B0A695;
     padding-bottom: 0.5rem;
     background: none;
   }
